--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser-dynamic": "^14.2.0",
     "@angular/router": "^14.2.0",
     "bootstrap": "^5.2.2",
+    "bootswatch": "^5.2.3",
     "component": "^0.19.9",
     "ngx-toastr": "^13.2.1",
     "popper.js": "^1.16.1",
